--- a/Semana_12_e_13_parte_II.ipynb
+++ b/Semana_12_e_13_parte_II.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+qlbYdTO+Ygn1rjr7Lox/",
+      "authorship_tag": "ABX9TyOK/zYh2gms/0lhedGl1BfF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,9 @@
       "cell_type": "code",
       "source": [
         "#6 - Considere a tupla pessoa = (\"Ana\", 30, \"Designer\"). Desempacote essa tupla em três variáveis e exiba apenas o conteúdo da variável que representa a profissão.\n",
-        "pessoa = (\"Ana\", 30, \"Designer\")\n"
+        "pessoa = (\"Ana\", 30, \"Designer\")\n",
+        "nome, idade, profissao = pessoa\n",
+        "print(profissao)\n"
       ],
       "metadata": {
         "id": "i7_geNLUWl6Y"
@@ -113,7 +115,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#7 - Crie um dicionário chamado alunos que armazene o nome e a idade de dois alunos. Em seguida, imprima esse dicionário.\n"
+        "#7 - Crie um dicionário chamado alunos que armazene o nome e a idade de dois alunos. Em seguida, imprima esse dicionário.\n",
+        "alunos = {'Paulão':18, 'Maria':19}\n",
+        "print(alunos)"
       ],
       "metadata": {
         "id": "jWk7xgOLWmAZ"
@@ -124,7 +128,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#8 - Considere o dicionário produtos = {\"arroz\": 5.60, \"feijão\": 7.80, \"macarrão\": 4.20}. Escreva um código que acesse e exiba o valor associado à chave \"feijão\"."
+        "#8 - Considere o dicionário produtos = {\"arroz\": 5.60, \"feijão\": 7.80, \"macarrão\": 4.20}. Escreva um código que acesse e exiba o valor associado à chave \"feijão\".\n",
+        "produtos = {\"arroz\": 5.60, \"feijão\": 7.80, \"macarrão\": 4.20}\n",
+        "print(produtos.get('feijão'))"
       ],
       "metadata": {
         "id": "rvQJU7F6WmFR"
@@ -135,7 +141,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#9 - Crie um dicionário vazio chamado aluno. Adicione as chaves \"nome\" com valor \"Carlos\" e \"idade\" com valor 21. Imprima o conteúdo final do dicionário."
+        "#9 - Crie um dicionário vazio chamado aluno. Adicione as chaves \"nome\" com valor \"Carlos\" e \"idade\" com valor 21. Imprima o conteúdo final do dicionário.\n",
+        "aluno = {}\n",
+        "aluno['nome'] = 'Carlos'\n",
+        "aluno['idade'] = 21\n",
+        "print(aluno)"
       ],
       "metadata": {
         "id": "zSYohocvWmNI"
@@ -146,7 +156,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#10 - Analise o código dados = {\"id\": 123, \"nome\": \"Ana\", \"id\": 456}. Explique o valor final da chave \"id\" e escreva um código que comprove esse comportamento."
+        "#10 - Analise o código dados = {\"id\": 123, \"nome\": \"Ana\", \"id\": 456}. Explique o valor final da chave \"id\" e escreva um código que comprove esse comportamento.\n",
+        "dados = {\"id\": 123, \"nome\": \"Ana\", \"id\": 456}\n",
+        "print(dados['id'])\n",
+        "#A 2ª chave sobrescreve o valor da 1ª chave"
       ],
       "metadata": {
         "id": "E3DqW0g9WmRJ"
@@ -157,7 +170,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#11 - Dado o conjunto frutas = {\"maçã\", \"banana\", \"laranja\"}, escreva um código que remova o item \"abacaxi\" sem gerar erro."
+        "#11 - Dado o conjunto frutas = {\"maçã\", \"banana\", \"laranja\"}, escreva um código que remova o item \"abacaxi\" sem gerar erro.\n",
+        "frutas = {\"maçã\", \"banana\", \"laranja\"} #Cria o conjunto de frutas\n",
+        "frutas.discard('abacaxi') #Discard = remove da coleção, mesmo não existindo | Remove = remove somente se existir\n",
+        "print(frutas) #Imprime para conferir"
       ],
       "metadata": {
         "id": "pBSNXLmGWmUI"
@@ -168,7 +184,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#12 - Escreva um código que utilize uma tupla como chave em um dicionário. Utilize como exemplo a tupla (2024, \"Maria\") associada ao valor \"Presente\" e imprima o dicionário."
+        "#12 - Escreva um código que utilize uma tupla como chave em um dicionário. Utilize como exemplo a tupla (2024, \"Maria\") associada ao valor \"Presente\" e imprima o dicionário.\n",
+        "dicionario = {} #Cria o dicionário vazio\n",
+        "tupla = (2024, \"Maria\") #Cria a tupla solicitada\n",
+        "dicionario[tupla] = 'presente' #Cria a chave com a tupla e atribui o valor\n",
+        "print(dicionario) #impressão para conferência"
       ],
       "metadata": {
         "id": "wN9lim6_WmXK"
@@ -179,7 +199,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#13 - Dada a lista lista = [1, 2, 2, 3, 3, 3, 4], escreva um código que remova os elementos duplicados e exiba apenas os valores únicos."
+        "#13 - Dada a lista lista = [1, 2, 2, 3, 3, 3, 4], escreva um código que remova os elementos duplicados e exiba apenas os valores únicos.\n",
+        "lista = [1, 2, 2, 3, 3, 3, 4]\n",
+        "print(list(set(lista)))"
       ],
       "metadata": {
         "id": "bCIdbL5NWmZ4"
@@ -190,7 +212,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#14 - Dado o dicionário notas = {\"Lucas\": 8.5, \"Julia\": 9.0, \"Bruno\": 7.5}, escreva um código que exiba o nome do aluno seguido da nota em cada linha, no formato: Aluno: Nota"
+        "#14 - Dado o dicionário notas = {\"Lucas\": 8.5, \"Julia\": 9.0, \"Bruno\": 7.5}, escreva um código que exiba o nome do aluno seguido da nota em cada linha, no formato: Aluno: Nota\n",
+        "notas = {\"Lucas\": 8.5, \"Julia\": 9.0, \"Bruno\": 7.5}\n",
+        "for aluno, nota in notas.items():\n",
+        "  print(f'{aluno}: {nota}')"
       ],
       "metadata": {
         "id": "7QTZ-KurWmcx"
@@ -201,76 +226,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#15 - Dado o dicionário:\n",
-        "'''\n",
-        "turma = {\n",
-        "\n",
-        "    \"Ana\": (8.0, 7.5),\n",
-        "\n",
-        "    \"Pedro\": (6.0, 5.5),\n",
-        "\n",
-        "    \"Laura\": (9.5, 9.0)\n",
-        "\n",
-        "}\n",
-        "\n",
-        "Escreva um código que crie um conjunto com os nomes dos alunos que obtiveram nota 9.5 em pelo menos uma das provas.'''"
+        "#15 - Dado o dicionário: turma = {\"Ana\": (8.0, 7.5),\"Pedro\": (6.0, 5.5),\"Laura\": (9.5, 9.0)}, Escreva um código que crie um conjunto com os nomes dos alunos que obtiveram nota 9.5 em pelo menos uma das provas.'''\n",
+        "turma = {\"Ana\": (8.0, 7.5),\"Pedro\": (6.0, 5.5),\"Laura\": (9.5, 9.0)} #Cria o dicionário solicitado\n",
+        "tops = set() #cria um conjunto vazio\n",
+        "for aluno, notas in turma.items(): #percorre o dicionário em busca dos itens\n",
+        "  if 9.5 in notas: #se houve nota 9.5\n",
+        "    tops.add(aluno) #adiciona o nome do aluno ao conjunto\n",
+        "print(tops) #imprime o conjunto"
       ],
       "metadata": {
         "id": "nB5LyQqYWmfY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bF9LOgsOWmj5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5Zd96omgWmmi"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ptprsU5lWmpA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "bJ3tWsyXWmry"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "OZqT1hKTWmuY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6d9kwp79Wmww"
       },
       "execution_count": null,
       "outputs": []
