--- a/Lista_de_Revisão_Semana_8_e_9_Revisão_de_Controle_de_Fluxo_17_04_a_25_04.ipynb
+++ b/Lista_de_Revisão_Semana_8_e_9_Revisão_de_Controle_de_Fluxo_17_04_a_25_04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlKbuRXJXl0INrijc8QLSX",
+      "authorship_tag": "ABX9TyM6ZzQwRXE7l/rNn+CwrSAD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,7 +163,7 @@
         "id": "E2GxVL3yjsZN",
         "outputId": "e8edaa33-d221-4326-c58d-ad0ef9fae2ae"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
         "id": "5cmHP8sDjsSK",
         "outputId": "25b27741-e708-4f3a-e9e7-4b45f2228e8a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
         "id": "yEceIhDmjsNj",
         "outputId": "4aefbd04-5c82-41b5-c486-dd067a710253"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +322,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#13 Escreva um programa com for que leia 10 números inteiros e diga ao final quantos deles são pares e quantos são ímpares."
+        "#13 Escreva um programa com for que leia 10 números inteiros e diga ao final quantos deles são pares e quantos são ímpares.\n",
+        "par = 0\n",
+        "impar = 0\n",
+        "for i in range(10):\n",
+        "  num = int(input(f'Digite o {i+1}° número:'))\n",
+        "  if num%2==0:\n",
+        "    par+=1\n",
+        "  else:\n",
+        "    impar+=1\n",
+        "print(f'Pares: {par} | Ímpares: {impar}')\n"
       ],
       "metadata": {
         "id": "-qBAY0OCjsLE"
@@ -333,18 +342,46 @@
     {
       "cell_type": "code",
       "source": [
-        "#14 Crie um programa com while que leia um número inteiro positivo. Se o usuário digitar um número negativo, o programa deve mostrar uma mensagem de erro e continuar pedindo até que um número válido seja digitado.\n"
+        "#14 Crie um programa com while que leia um número inteiro positivo. Se o usuário digitar um número negativo, o programa deve mostrar uma mensagem de erro e continuar pedindo até que um número válido seja digitado.\n",
+        "numero = int(input('Digite um número inteiro positivo:'))\n",
+        "while numero < 0:\n",
+        "  numero = int(input('Número inválido - Digite um número inteiro positivo:'))\n"
       ],
       "metadata": {
-        "id": "MbQK28jukRBX"
+        "id": "MbQK28jukRBX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "99b02377-0f07-4e43-9a3b-5cd87f586d73"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digite um número inteiro positivo:-1\n",
+            "Número inválido - Digite um número inteiro positivo:-3\n",
+            "Número inválido - Digite um número inteiro positivo:5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#15 Escreva um programa com for e enumerate que mostre os números de 5 até 15. Para cada número, diga sua posição na sequência (iniciando do 0) e se ele é par ou ímpar."
+        "#15 Escreva um programa com for e enumerate que mostre os números de 5 até 15. Para cada número, diga sua posição na sequência (iniciando do 0) e se ele é par ou ímpar.\n",
+        "#Criando a lista de 5 a 16:\n",
+        "lista = []\n",
+        "for i in range(5,16):\n",
+        "  lista.append(i)\n",
+        "\n",
+        "#Lendo a lista e verificando os dados:\n",
+        "for indice, valor in enumerate(lista):\n",
+        "  if valor%2==0:\n",
+        "    print(f'O {valor} está na posição {indice} e é par!')\n",
+        "  else:\n",
+        "    print(f'O {valor} está na posição {indice} e é ímpar!')\n"
       ],
       "metadata": {
         "id": "4l_-1gQkjsI7"
@@ -355,18 +392,68 @@
     {
       "cell_type": "code",
       "source": [
-        "#16 Escreva um programa com while que simule uma votação. O usuário pode votar no candidato A (1), candidato B (2) ou encerrar (0). O programa deve continuar até que o número 0 seja digitado. Ao final, mostre a quantidade de votos para cada candidato."
+        "#16 Escreva um programa com while que simule uma votação. O usuário pode votar no candidato A (1), candidato B (2) ou encerrar (0). O programa deve continuar até que o número 0 seja digitado. Ao final, mostre a quantidade de votos para cada candidato.\n",
+        "candidato1 = 0 #Candidato A\n",
+        "candidato2 = 0 #Candidato B\n",
+        "while True:\n",
+        "  voto = int(input('Digite seu voto: '))\n",
+        "  if voto == 1:\n",
+        "    candidato1+=1\n",
+        "  elif voto == 2:\n",
+        "    candidato2+=1\n",
+        "  elif voto == 0:\n",
+        "    break\n",
+        "  else:\n",
+        "    print('Candidato não existe - Voto Invalidado')\n",
+        "print(f'Candidato A: {candidato1}\\nCandidato B: {candidato2}')\n",
+        "\n",
+        "#Invenção de moda\n",
+        "if candidato1 > candidato2:\n",
+        "  print('Candidato A - Venceu!')\n",
+        "elif candidato1 < candidato2:\n",
+        "  print('Candidato B - Venceu!')\n",
+        "else:\n",
+        "  print('Empate!')\n"
       ],
       "metadata": {
-        "id": "qmqSYjxjjsGi"
+        "id": "qmqSYjxjjsGi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "44cfff5d-fc6c-4c72-e74d-a48bf8d7171c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite seu voto: 1\n",
+            "Digite seu voto: 1\n",
+            "Digite seu voto: 2\n",
+            "Digite seu voto: 3\n",
+            "Candidato não existe - Voto Invalidado\n",
+            "Digite seu voto: 0\n",
+            "Candidato A: 2\n",
+            "Candidato B: 1\n",
+            "Candidato A - Venceu!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#17 Escreva um programa com for in range que percorra os números de 1 a 50. Para cada número, diga se ele é divisível por 5, por 7, por ambos, ou por nenhum dos dois."
+        "#17 Escreva um programa com for in range que percorra os números de 1 a 50. Para cada número, diga se ele é divisível por 5, por 7, por ambos, ou por nenhum dos dois.\n",
+        "for i in range(1,51):\n",
+        "  if i % 5 == 0 and i%7 == 0:\n",
+        "    print(f'{i} é divisível por 5 e 7.')\n",
+        "  elif i%5 == 0:\n",
+        "    print(f'{i} é divisível apenas por 5.')\n",
+        "  elif i%7 == 0:\n",
+        "    print(f'{i} é divisível apenas por 7.')\n",
+        "  else:\n",
+        "    print(f'{i} não é divisível por 5 ou 7.')"
       ],
       "metadata": {
         "id": "GO0IQNu8jsEC"
@@ -377,7 +464,17 @@
     {
       "cell_type": "code",
       "source": [
-        "#18 Escreva um programa com while que leia dois números inteiros e diga qual é o maior. Depois, pergunte ao usuário se ele deseja comparar outros dois números. O programa só termina se a resposta for diferente de \"s\"."
+        "#18 Escreva um programa com while que leia dois números inteiros e diga qual é o maior. Depois, pergunte ao usuário se ele deseja comparar outros dois números. O programa só termina se a resposta for diferente de \"s\".\n",
+        "while True:\n",
+        "  numA =  int(input('Digite o primeiro número: '))\n",
+        "  numB =  int(input('Digite o segundo número: '))\n",
+        "  if numA > numB:\n",
+        "    print(f'Maior: {numA}')\n",
+        "  else:\n",
+        "    print(f'Maior: {numB}')\n",
+        "  var = input('Deseja continuar? s/n:')\n",
+        "  if var != 's':\n",
+        "    break\n"
       ],
       "metadata": {
         "id": "jWWbC0zzjsBs"
@@ -388,33 +485,76 @@
     {
       "cell_type": "code",
       "source": [
-        "#19 Escreva um programa com for in que leia uma palavra de até 10 letras, pedindo uma letra por vez. Ao final, o programa deve mostrar quais letras são vogais e quais são consoantes. Não use listas."
+        "#19 Escreva um programa com for in que leia uma palavra de até 10 letras, pedindo uma letra por vez. Ao final, o programa deve mostrar quais letras são vogais e quais são consoantes. Não use listas.\n",
+        "palavra = 'Mulambo'\n",
+        "vogais = 0\n",
+        "consoantes = 0\n",
+        "for i in palavra:\n",
+        "  if i.lower() in 'aeiou':\n",
+        "    vogais+=1\n",
+        "  else:\n",
+        "    consoantes+=1\n",
+        "print(f'Vogais:{vogais} / Consoantes:{consoantes}')"
       ],
       "metadata": {
-        "id": "-Whmai8Tjr4C"
+        "id": "-Whmai8Tjr4C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8df3d5c5-bfe1-4d72-e85d-708ac595bc1e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vogais:3 / Consoantes:4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#20 Escreva um programa com while que simule um menu de opções: (1) Sacar, (2) Depositar, (3) Sair. O menu deve ser mostrado repetidamente até que o usuário escolha a opção 3 para sair."
+        "#20 Escreva um programa com while que simule um menu de opções: (1) Sacar, (2) Depositar, (3) Sair. O menu deve ser mostrado repetidamente até que o usuário escolha a opção 3 para sair.\n",
+        "while True:\n",
+        "  print('Opções:\\n(1) - Sacar\\n(2) - Depositar\\n(3) - Sair')\n",
+        "  op = int(input('Digite a opção desejada:'))\n",
+        "  if op == 3:\n",
+        "    break"
       ],
       "metadata": {
-        "id": "yLAwo_19jr17"
+        "id": "yLAwo_19jr17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f72bdbbe-e35b-4b4f-d2ae-c35a9879dbe1"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VzS31RU4x_dB"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Opções:\n",
+            "(1) - Sacar\n",
+            "(2) - Depositar\n",
+            "(3) - Sair\n",
+            "Digite a opção desejada:1\n",
+            "Opções:\n",
+            "(1) - Sacar\n",
+            "(2) - Depositar\n",
+            "(3) - Sair\n",
+            "Digite a opção desejada:2\n",
+            "Opções:\n",
+            "(1) - Sacar\n",
+            "(2) - Depositar\n",
+            "(3) - Sair\n",
+            "Digite a opção desejada:3\n"
+          ]
+        }
+      ]
     }
   ]
 }
