--- a/Semana_16.ipynb
+++ b/Semana_16.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU3ZFIdDKKo6bBsPfEf7IB",
+      "authorship_tag": "ABX9TyNP2DfCAZbVyXgudNxuEJbY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,223 +28,106 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "pip install pandas"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Qm0xwrR_ny4k",
-        "outputId": "2f00db05-5a1c-43cd-da55-b19977211754"
+        "id": "zjLafHNa4TKV",
+        "outputId": "d8a119f1-a6ff-4e7c-f378-8581436bd4e5"
       },
-      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
-            "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (2.0.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+            "Conteúdo do arquivo:\n",
+            "Esta é a primeira frase.\n",
+            "Esta é a segunda frase.\n",
+            "Esta é a terceira frase.\n",
+            "Esta é a quarta frase.\n",
+            "Esta é a quinta frase.\n",
+            "\n",
+            "Número total de linhas: 5\n",
+            "\n",
+            "Dados lidos do Excel:\n",
+            "    Produto  Preço  Quantidade\n",
+            "0    Caneta    2.5          40\n",
+            "1   Caderno   15.0          10\n",
+            "2  Borracha    1.5          25\n",
+            "3   Mochila  120.0           2\n",
+            "4     Lápis    1.0         100\n",
+            "\n",
+            "Total geral de vendas: R$ 627.50\n",
+            "Produto mais caro (Total): Mochila (R$ 240.00)\n",
+            "\n",
+            "Produtos com total acima de R$100:\n",
+            "   Produto  Total\n",
+            "1  Caderno  150.0\n",
+            "3  Mochila  240.0\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
+      ],
       "source": [
-        "# Crie um arquivo chamado meuarquivo.txt e escreva 3 frases.\n",
-        "with open('meuarquivo.txt','w') as arquivo:\n",
-        "  arquivo.write('Josué é Vascaíno\\n')\n",
-        "  arquivo.write('Rianni é Flamenguista\\n')\n",
-        "  arquivo.write('Adriana é de Jesus\\n')\n",
+        "import pandas as pd\n",
         "\n",
-        "# Acrescente duas frases novas ao final do arquivo.\n",
-        "with open('meuarquivo.txt','a') as arquivo:\n",
-        "  arquivo.write('Suelany mora em Pinheiros\\n')\n",
-        "  arquivo.write('Patricia está no notebook\\n')\n",
+        "# 1. Criar e escrever 3 frases no arquivo de texto\n",
+        "with open(\"meuarquivo.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+        "    f.write(\"Esta é a primeira frase.\\n\")\n",
+        "    f.write(\"Esta é a segunda frase.\\n\")\n",
+        "    f.write(\"Esta é a terceira frase.\\n\")\n",
         "\n",
-        "# Leia e mostre o conteúdo linha por linha.\n",
-        "with open('meuarquivo.txt','r') as arquivo:\n",
-        "  for i in arquivo:\n",
-        "    print(i.strip())\n",
+        "# 2. Acrescentar duas frases\n",
+        "with open(\"meuarquivo.txt\", \"a\", encoding=\"utf-8\") as f:\n",
+        "    f.write(\"Esta é a quarta frase.\\n\")\n",
+        "    f.write(\"Esta é a quinta frase.\\n\")\n",
         "\n",
-        "# Conte e imprima quantas linhas o arquivo possui.\n",
-        "contador = 0\n",
-        "with open('meuarquivo.txt','r') as arquivo:\n",
-        "  for i in arquivo:\n",
-        "    contador+=1\n",
-        "print(f'O arquivo tem {contador} linhas')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6Eju5igYeyDP",
-        "outputId": "1de990d8-2acf-44f5-94c6-8b17daf5f41f"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Josué é Vascaíno\n",
-            "Rianni é Flamenguista\n",
-            "Adriana é de Jesus\n",
-            "Suelany mora em Pinheiros\n",
-            "Patricia está no notebook\n",
-            "O arquivo tem 5 linhas\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas #importa a biblioteca pandas para usar formatos além do txt\n",
-        "#Cria o pacote de dados\n",
-        "dados = { \"Produto\": [\"Lajota\", \"Cimento\", \"Rejunte\"], \"Preço\": [1.50,33,10], \"Quantidade\": [2350, 1450, 4520] }\n",
-        "#Cria a estrutura de dados em planilha de dados\n",
-        "tabela = pandas.DataFrame(dados)\n",
-        "#converte em formato compatível com excel\n",
-        "tabela.to_excel(\"estoque.xlsx\", index=False)"
-      ],
-      "metadata": {
-        "id": "fRXSTclHpwEA"
-      },
-      "execution_count": 38,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas\n",
-        "#Leia o arquivo e mostre os dados.\n",
-        "tabela = pandas.read_excel(\"estoque.xlsx\")\n",
-        "print(tabela)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bXXgBBYfpTUg",
-        "outputId": "31c7660c-8340-4ce8-ed8e-e7cb8f080c17"
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   Produto  Preço  Quantidade\n",
-            "0   Lajota    1.5        2350\n",
-            "1  Cimento   33.0        1450\n",
-            "2  Rejunte   10.0        4520\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#Crie a coluna Total = Preço * Quantidade.\n",
-        "import pandas\n",
-        "from google.colab import files # Necessário para o upload via código, opcional aqui\n",
-        "tabela = pandas.read_excel(\"estoque.xlsx\")\n",
-        "tabela['Total'] = tabela['Preço']*tabela['Quantidade']\n",
+        "# 3. Ler e mostrar linha por linha\n",
+        "print(\"Conteúdo do arquivo:\")\n",
+        "with open(\"meuarquivo.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    linhas = f.readlines()\n",
+        "    for linha in linhas:\n",
+        "        print(linha.strip())\n",
         "\n",
-        "#Leia o arquivo e mostre os dados.\n",
-        "tabela = pandas.read_excel(\"estoque.xlsx\")\n",
-        "print(tabela)\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bsLO0Uf-qgZJ",
-        "outputId": "af067113-dac6-46bb-ec4f-0a78ddfba84b"
-      },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   Produto  Preço  Quantidade\n",
-            "0   Lajota    1.5        2350\n",
-            "1  Cimento   33.0        1450\n",
-            "2  Rejunte   10.0        4520\n"
-          ]
-        }
+        "# 4. Contar linhas\n",
+        "print(f\"\\nNúmero total de linhas: {len(linhas)}\")\n",
+        "\n",
+        "# 5. Criar dicionário e DataFrame\n",
+        "dados = {\n",
+        "    \"Produto\": [\"Caneta\", \"Caderno\", \"Borracha\", \"Mochila\", \"Lápis\"],\n",
+        "    \"Preço\": [2.5, 15.0, 1.5, 120.0, 1.0],\n",
+        "    \"Quantidade\": [40, 10, 25, 2, 100]\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(dados)\n",
+        "\n",
+        "# 6. Salvar em produtos.xlsx\n",
+        "df.to_excel(\"produtos.xlsx\", index=False)\n",
+        "\n",
+        "# 7. Ler produtos.xlsx e mostrar dados\n",
+        "df_lido = pd.read_excel(\"produtos.xlsx\")\n",
+        "print(\"\\nDados lidos do Excel:\")\n",
+        "print(df_lido)\n",
+        "\n",
+        "# 8. Criar coluna Total\n",
+        "df_lido[\"Total\"] = df_lido[\"Preço\"] * df_lido[\"Quantidade\"]\n",
+        "\n",
+        "# 9. Total geral de vendas\n",
+        "total_geral = df_lido[\"Total\"].sum()\n",
+        "print(f\"\\nTotal geral de vendas: R$ {total_geral:.2f}\")\n",
+        "\n",
+        "# 10. Produto mais caro em total\n",
+        "mais_caro = df_lido.loc[df_lido[\"Total\"].idxmax()]\n",
+        "print(f\"Produto mais caro (Total): {mais_caro['Produto']} (R$ {mais_caro['Total']:.2f})\")\n",
+        "\n",
+        "# 11. Produtos com total > R$100\n",
+        "print(\"\\nProdutos com total acima de R$100:\")\n",
+        "acima_100 = df_lido[df_lido[\"Total\"] > 100]\n",
+        "print(acima_100[[\"Produto\", \"Total\"]])\n",
+        "\n",
+        "# 12. Salvar planilha atualizada\n",
+        "df_lido.to_excel(\"produtos_atualizados.xlsx\", index=False)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas\n",
-        "#Calcule e mostre:\n",
-        "tabela = pandas.read_excel(\"estoque.xlsx\")\n",
-        "#O total geral de vendas\n",
-        "tabela['Total'] = tabela['Preço']*tabela['Quantidade']\n",
-        "total_vendas = tabela[\"Total\"].sum()\n",
-        "print(f'Total de vendas: R${total_vendas}')\n",
-        "#O produto mais caro (em total)\n",
-        "maior_valor = tabela['Preço'].max()\n",
-        "caro = tabela[tabela['Preço'] == maior_valor]\n",
-        "print(caro.Produto)\n",
-        "#Produtos com total acima de R$10\n",
-        "acima = tabela[tabela['Preço'] >= 10]\n",
-        "print(acima.Produto)\n",
-        "#Salve a tabela atualizada como produtos_atualizados.xlsx.\n",
-        "nova_tabela = pandas.DataFrame(tabela)\n",
-        "tabela.to_excel(\"produtos_atualizados.xlsx\", index=False)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w7d3dC3fqjY5",
-        "outputId": "d6bb1d8c-193d-4626-8a58-cf9150fd8929"
-      },
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Total de vendas: R$96575.0\n",
-            "1    Cimento\n",
-            "Name: Produto, dtype: object\n",
-            "1    Cimento\n",
-            "2    Rejunte\n",
-            "Name: Produto, dtype: object\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "-iQBX0Npw_tm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "NCTygl5wqkqh"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
