--- a/Semana_17.ipynb
+++ b/Semana_17.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkM09aTTLbErr+EOYcfdcA",
+      "authorship_tag": "ABX9TyNrCYelEAhyzWhj34Evv/Vp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,11 +123,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "alunos = {\n",
+        "    \"Nome\": [\"Ana Lima\", \"Bruno Castro\", \"Carla Souza\", \"Daniel Alves\", \"Elisa Martins\"],\n",
+        "    \"Curso\": [\"Informática\", \"Informática\", \"Administração\", \"Administração\", \"Informática\"],\n",
+        "    \"Nota1\": [8.0, 5.5, 9.0, 6.0, 10.0],\n",
+        "    \"Nota2\": [9.0, 6.0, 9.5, 5.5, 9.5],\n",
+        "    \"Faltas\": [2, 5, 0, 3, 1]\n",
+        "}\n",
+        "#Convertendo em formato compatível para Excel\n",
+        "dados_alunos = pd.DataFrame(alunos) #pd -> Pandas\n",
+        "#Salvando o arquivo em formato Excel\n",
+        "dados_alunos.to_excel('alunos.xlsx', index=False)\n",
+        "\n",
+        "#1 - Listar os alunos aprovados (média maior ou igual a 7 e faltas menores ou iguais a 3).\n",
+        "#2 - Calcular a média geral por curso.\n",
+        "#3 - Identificar o aluno com a menor média."
+      ],
       "metadata": {
         "id": "i0jg8NCeLemQ"
       },
-      "execution_count": null,
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "estoque = {\n",
+        "    \"Produto\": [\"Papel A4\", \"Cartucho HP\", \"Teclado USB\", \"Mouse Óptico\", 'Monitor 24\"'],\n",
+        "    \"Fornecedor\": [\"Office Paper\", \"HP Brasil\", \"TecWorld\", \"TecWorld\", \"LG\"],\n",
+        "    \"Estoque\": [500, 15, 50, 20, 8],\n",
+        "    \"Preço Unitário\": [25, 120, 70, 45, 950]\n",
+        "}\n",
+        "#Convertendo em formato compatível para Excel\n",
+        "dados_estoque = pd.DataFrame(estoque) #pd -> Pandas\n",
+        "#Salvando o arquivo em formato Excel\n",
+        "dados_estoque.to_excel('estoque.xlsx', index=False)\n",
+        "#1 - Listar os produtos com estoque abaixo de 20 unidades.\n",
+        "#2 - Calcular o valor total em estoque por fornecedor.\n",
+        "#3 - Identificar o produto mais caro em valor total (preço × estoque)."
+      ],
+      "metadata": {
+        "id": "WF9aBBPJOLBU"
+      },
+      "execution_count": 54,
       "outputs": []
     }
   ]
