--- a/Semana_17.ipynb
+++ b/Semana_17.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrCYelEAhyzWhj34Evv/Vp",
+      "authorship_tag": "ABX9TyOiup0axUHn/vlQmxOkGf6S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,8 +135,11 @@
         "dados_alunos = pd.DataFrame(alunos) #pd -> Pandas\n",
         "#Salvando o arquivo em formato Excel\n",
         "dados_alunos.to_excel('alunos.xlsx', index=False)\n",
+        "#Lendo o arquivo Excel para consultas\n",
+        "dados_alunos = pd.read_excel(\"alunos.xlsx\")\n",
         "\n",
         "#1 - Listar os alunos aprovados (média maior ou igual a 7 e faltas menores ou iguais a 3).\n",
+        "\n",
         "#2 - Calcular a média geral por curso.\n",
         "#3 - Identificar o aluno com a menor média."
       ],
@@ -159,6 +162,8 @@
         "dados_estoque = pd.DataFrame(estoque) #pd -> Pandas\n",
         "#Salvando o arquivo em formato Excel\n",
         "dados_estoque.to_excel('estoque.xlsx', index=False)\n",
+        "#Lendo o arquivo Excel para consultas\n",
+        "dados_estoque = pd.read_excel(\"estoque.xlsx\")\n",
         "#1 - Listar os produtos com estoque abaixo de 20 unidades.\n",
         "#2 - Calcular o valor total em estoque por fornecedor.\n",
         "#3 - Identificar o produto mais caro em valor total (preço × estoque)."
