--- a/Semana_17.ipynb
+++ b/Semana_17.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiup0axUHn/vlQmxOkGf6S",
+      "authorship_tag": "ABX9TyMrM1Nf9OBNC0LaXsOihCmu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,15 +139,48 @@
         "dados_alunos = pd.read_excel(\"alunos.xlsx\")\n",
         "\n",
         "#1 - Listar os alunos aprovados (média maior ou igual a 7 e faltas menores ou iguais a 3).\n",
+        "dados_alunos['Média'] = (dados_alunos['Nota1'] + dados_alunos['Nota2'])/2\n",
+        "#aprovados = localizar[(alunos com média >= 7) e (alunos com faltas <= 3)]\n",
+        "aprovados = dados_alunos.loc[(dados_alunos['Média']>=7) & (dados_alunos['Faltas']<=3)]\n",
+        "print('#1\\n',aprovados)\n",
         "\n",
         "#2 - Calcular a média geral por curso.\n",
-        "#3 - Identificar o aluno com a menor média."
+        "media_curso = dados_alunos.groupby('Curso')['Média'].mean()\n",
+        "print('\\n#2\\n',media_curso)\n",
+        "\n",
+        "#3 - Identificar o aluno com a menor média.\n",
+        "menos_cdf = dados_alunos.loc[dados_alunos['Média'].idxmin()]\n",
+        "print('\\n#3 - O aluno com a menor média é o:',menos_cdf.Nome)"
       ],
       "metadata": {
-        "id": "i0jg8NCeLemQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i0jg8NCeLemQ",
+        "outputId": "819471bb-d1c3-4877-d7f4-2eec52aeea98"
       },
-      "execution_count": 55,
-      "outputs": []
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "#1\n",
+            "             Nome          Curso  Nota1  Nota2  Faltas  Média\n",
+            "0       Ana Lima    Informática    8.0    9.0       2   8.50\n",
+            "2    Carla Souza  Administração    9.0    9.5       0   9.25\n",
+            "4  Elisa Martins    Informática   10.0    9.5       1   9.75\n",
+            "\n",
+            "#2\n",
+            " Curso\n",
+            "Administração    7.5\n",
+            "Informática      8.0\n",
+            "Name: Média, dtype: float64\n",
+            "\n",
+            "#3 - O aluno com a menor média é o: Bruno Castro\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -164,15 +197,48 @@
         "dados_estoque.to_excel('estoque.xlsx', index=False)\n",
         "#Lendo o arquivo Excel para consultas\n",
         "dados_estoque = pd.read_excel(\"estoque.xlsx\")\n",
+        "\n",
         "#1 - Listar os produtos com estoque abaixo de 20 unidades.\n",
+        "estoque_baixo = dados_estoque.loc[dados_estoque['Estoque']<20]\n",
+        "print('#1 -Produtos com estoque abaixo de 20:\\n',estoque_baixo)\n",
+        "\n",
         "#2 - Calcular o valor total em estoque por fornecedor.\n",
-        "#3 - Identificar o produto mais caro em valor total (preço × estoque)."
+        "dados_estoque['Valor_Total'] = dados_estoque['Estoque']*dados_estoque['Preço Unitário']\n",
+        "valor_fornecedor = dados_estoque.groupby('Fornecedor')['Valor_Total'].sum()\n",
+        "print('\\n#2 - Valor por fornecedor em estoque',valor_fornecedor)\n",
+        "#3 - Identificar o produto mais caro em valor total (preço × estoque).\n",
+        "produto_caro = dados_estoque.loc[dados_estoque['Valor_Total'].idxmax()]\n",
+        "print('\\n#3 - O produto mais caro é:',produto_caro.Produto)"
       ],
       "metadata": {
-        "id": "WF9aBBPJOLBU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WF9aBBPJOLBU",
+        "outputId": "6e5ad964-6eec-4bc7-9dd5-5169af33e904"
       },
-      "execution_count": 54,
-      "outputs": []
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "#1 -Produtos com estoque abaixo de 20:\n",
+            "        Produto Fornecedor  Estoque  Preço Unitário\n",
+            "1  Cartucho HP  HP Brasil       15             120\n",
+            "4  Monitor 24\"         LG        8             950\n",
+            "\n",
+            "#2 - Valor por fornecedor em estoque Fornecedor\n",
+            "HP Brasil        1800\n",
+            "LG               7600\n",
+            "Office Paper    12500\n",
+            "TecWorld         4400\n",
+            "Name: Valor_Total, dtype: int64\n",
+            "\n",
+            "#3 - O produto mais caro é: Papel A4\n"
+          ]
+        }
+      ]
     }
   ]
 }
