--- a/Semana_18.ipynb
+++ b/Semana_18.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEuKbTrjLb1tbN8BfZpk9M",
+      "authorship_tag": "ABX9TyNyOh5DwNbG4+Z6RqRNx752",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,6 +108,189 @@
             "b)  4\n",
             "c)  <class 'list'> [1, 2, 3, 4, 5]\n",
             "d)  <class 'tuple'> (1, 2, 3, 4, 5)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3 - Conjuntos (set)\n",
+        "\n",
+        "#a) Crie dois conjuntos com nomes de cidades. Alguns nomes devem se repetir.\n",
+        "conjuntoA = {'Nova Venécia', 'Jaguaré', 'São Mateus', 'Vila Valério'}\n",
+        "conjuntoB = {'Ecoporanga', 'Vila Pavão', 'Pinheiros', 'Nova Venécia'}\n",
+        "print('a)\\n',conjuntoA,'\\n',conjuntoB)\n",
+        "\n",
+        "#b) Mostre a união dos conjuntos.\n",
+        "print('\\nb)\\n',conjuntoA.union(conjuntoB))\n",
+        "\n",
+        "#c) Mostre a interseção dos conjuntos.\n",
+        "print('\\nc)\\n',conjuntoA.intersection(conjuntoB))\n",
+        "\n",
+        "#d) Adicione uma nova cidade ao primeiro conjunto.\n",
+        "conjuntoA.add('Boa Esperança')\n",
+        "print('\\nd)\\n',conjuntoA)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vilm-ebnwgZJ",
+        "outputId": "5021657b-df24-4bf4-9a31-8346d29c188b"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a)\n",
+            " {'Vila Valério', 'Jaguaré', 'Nova Venécia', 'São Mateus'} \n",
+            " {'Pinheiros', 'Nova Venécia', 'Vila Pavão', 'Ecoporanga'}\n",
+            "\n",
+            "b)\n",
+            " {'Pinheiros', 'Nova Venécia', 'Jaguaré', 'São Mateus', 'Ecoporanga', 'Vila Valério', 'Vila Pavão'}\n",
+            "\n",
+            "c)\n",
+            " {'Nova Venécia'}\n",
+            "\n",
+            "d)\n",
+            " {'Nova Venécia', 'Jaguaré', 'Boa Esperança', 'São Mateus', 'Vila Valério'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4 - Dicionários\n",
+        "# a) Crie um dicionário com informações de um aluno: nome, idade, curso.\n",
+        "aluno = {\n",
+        "    'Nome':'Fulaninho de Mauá',\n",
+        "    'Idade': 18,\n",
+        "    'Curso': 'Engenharia Civil'\n",
+        "}\n",
+        "print('\\na)',type(aluno),'\\n',aluno)\n",
+        "\n",
+        "# b) Adicione uma chave chamada \"nota_final\" com valor 8.5.\n",
+        "aluno['Nota_Final'] = 8.5\n",
+        "print('\\nb)',type(aluno),'\\n',aluno)\n",
+        "\n",
+        "# c) Modifique a idade do aluno para 21.\n",
+        "aluno['Idade'] = 21\n",
+        "print('\\nc)',type(aluno),'\\n',aluno)\n",
+        "\n",
+        "# d) Remova a chave “curso” do dicionário.\n",
+        "#del aluno['Curso']\n",
+        "aluno.pop('Curso')\n",
+        "print('\\nd)',type(aluno),'\\n',aluno)\n",
+        "\n",
+        "# e) Mostre todas as chaves e valores.\n",
+        "print('\\ne)')\n",
+        "for chave, valor in aluno.items():\n",
+        "  print(chave,':',valor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZuU3b94xwqWa",
+        "outputId": "4b234fe5-7ada-45fb-a8ce-61e217d38c72"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "a) <class 'dict'> \n",
+            " {'Nome': 'Fulaninho de Mauá', 'Idade': 18, 'Curso': 'Engenharia Civil'}\n",
+            "\n",
+            "b) <class 'dict'> \n",
+            " {'Nome': 'Fulaninho de Mauá', 'Idade': 18, 'Curso': 'Engenharia Civil', 'Nota_Final': 8.5}\n",
+            "\n",
+            "c) <class 'dict'> \n",
+            " {'Nome': 'Fulaninho de Mauá', 'Idade': 21, 'Curso': 'Engenharia Civil', 'Nota_Final': 8.5}\n",
+            "\n",
+            "d) <class 'dict'> \n",
+            " {'Nome': 'Fulaninho de Mauá', 'Idade': 21, 'Nota_Final': 8.5}\n",
+            "\n",
+            "e)\n",
+            "Nome : Fulaninho de Mauá\n",
+            "Idade : 21\n",
+            "Nota_Final : 8.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5 - Leitura e escrita em arquivos .txt\n",
+        "# a) Crie um arquivo chamado notas.txt e escreva o nome de 3 alunos e suas notas. Cada linha deve conter:\n",
+        "# Aluno: João - Nota: 7.5\n",
+        "# Aluno: Ana - Nota: 9.0\n",
+        "# Aluno: Carla - Nota: 6.8\n",
+        "with open('notas.txt','w',encoding='utf-8') as notas:\n",
+        "  notas.write('Aluno: João - Nota: 7.5\\n')\n",
+        "  notas.write('Aluno: Ana - Nota: 9.0\\n')\n",
+        "  notas.write('Aluno: Carla - Nota: 6.8')\n",
+        "\n",
+        "with open('notas.txt','r',encoding='utf-8') as lendo_notas:\n",
+        "  print('a)\\n',lendo_notas.read())\n",
+        "\n",
+        "# b) Acrescente mais um aluno ao final do arquivo.\n",
+        "with open('notas.txt','a',encoding='utf-8') as notas:\n",
+        "  notas.write('\\nAluno: Josué - Nota: 8.5')\n",
+        "\n",
+        "with open('notas.txt','r',encoding='utf-8') as lendo_notas:\n",
+        "  print('\\nb)\\n',lendo_notas.read())\n",
+        "\n",
+        "# c) Leia e exiba todas as linhas do arquivo.\n",
+        "with open('notas.txt','r',encoding='utf-8') as lendo_notas:\n",
+        "  linhas = lendo_notas.readlines()\n",
+        "  print('\\nc)')\n",
+        "  for l in linhas:\n",
+        "    print(l.strip())\n",
+        "\n",
+        "# d) Conte quantas linhas há no arquivo.\n",
+        "  print('\\nd)',len(linhas))\n",
+        "\n",
+        "# e) Mostre apenas os nomes dos alunos.\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "48F6nbF91uXp",
+        "outputId": "5496416e-b3dc-4aa7-cb37-be03153a30b4"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a)\n",
+            " Aluno: João - Nota: 7.5\n",
+            "Aluno: Ana - Nota: 9.0\n",
+            "Aluno: Carla - Nota: 6.8\n",
+            "\n",
+            "b)\n",
+            " Aluno: João - Nota: 7.5\n",
+            "Aluno: Ana - Nota: 9.0\n",
+            "Aluno: Carla - Nota: 6.8\n",
+            "Aluno: Josué - Nota: 8.5\n",
+            "\n",
+            "c)\n",
+            "Aluno: João - Nota: 7.5\n",
+            "Aluno: Ana - Nota: 9.0\n",
+            "Aluno: Carla - Nota: 6.8\n",
+            "Aluno: Josué - Nota: 8.5\n",
+            "\n",
+            "d) 4\n"
           ]
         }
       ]
