--- a/Semana_18.ipynb
+++ b/Semana_18.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyOh5DwNbG4+Z6RqRNx752",
+      "authorship_tag": "ABX9TyOjJ5bMlTNJZHOqtSOyq6S1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,16 +258,22 @@
         "# d) Conte quantas linhas há no arquivo.\n",
         "  print('\\nd)',len(linhas))\n",
         "\n",
-        "# e) Mostre apenas os nomes dos alunos.\n"
+        "# e) Mostre apenas os nomes dos alunos.\n",
+        "with open('notas.txt','r',encoding='utf-8') as lendo_notas:\n",
+        "  linhas = lendo_notas.readlines()\n",
+        "  print('\\nc)')\n",
+        "  for l in linhas:\n",
+        "    print(l.split('-')[0].replace('Aluno :','').strip())\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "48F6nbF91uXp",
-        "outputId": "5496416e-b3dc-4aa7-cb37-be03153a30b4"
+        "outputId": "29fc292c-547e-490f-ba4b-fd676d1398a8"
       },
-      "execution_count": 74,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +296,13 @@
             "Aluno: Carla - Nota: 6.8\n",
             "Aluno: Josué - Nota: 8.5\n",
             "\n",
-            "d) 4\n"
+            "d) 4\n",
+            "\n",
+            "c)\n",
+            "Aluno: João\n",
+            "Aluno: Ana\n",
+            "Aluno: Carla\n",
+            "Aluno: Josué\n"
           ]
         }
       ]
